--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MSAApiCallingJuicePizza"
         tools:targetApi="31">
-        <activity android:name="com.example.msajuice.BaseActivity"/>
+        <activity android:name="com.example.msajuice.BaseActivity.BaseActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
